--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "moment-timezone": "^0.5.48"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.24.0",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0"
   }
 }
